@@ -16,6 +16,8 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.locationtech.jts.geom.Coordinate;
+import org.opentripplanner.OtpModel;
+import org.opentripplanner.ext.fares.FaresFilter;
 import org.opentripplanner.ext.flex.trip.FlexTrip;
 import org.opentripplanner.ext.flex.trip.ScheduledDeviatedTrip;
 import org.opentripplanner.model.FlexStopLocation;
@@ -31,6 +33,7 @@ import org.opentripplanner.routing.core.RoutingContext;
 import org.opentripplanner.routing.core.State;
 import org.opentripplanner.routing.core.TemporaryVerticesContainer;
 import org.opentripplanner.routing.core.WrappedCurrency;
+import org.opentripplanner.routing.fares.FareService;
 import org.opentripplanner.routing.framework.DebugTimingAggregator;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graphfinder.NearbyStop;
@@ -38,6 +41,7 @@ import org.opentripplanner.routing.location.StreetLocation;
 import org.opentripplanner.standalone.config.RouterConfig;
 import org.opentripplanner.standalone.server.Router;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.service.TransitModel;
 import org.opentripplanner.util.OTPFeature;
 import org.opentripplanner.util.PolylineEncoder;
 import org.opentripplanner.util.TestUtils;
@@ -53,12 +57,13 @@ import org.opentripplanner.util.model.EncodedPolyline;
 public class ScheduledDeviatedTripTest extends FlexTest {
 
   static Graph graph;
+  static TransitModel transitModel;
 
   float delta = 0.01f;
 
   @Test
   public void parseCobbCountyAsScheduledDeviatedTrip() {
-    var flexTrips = graph.flexTripsById.values();
+    var flexTrips = transitModel.flexTripsById.values();
     assertFalse(flexTrips.isEmpty());
     assertEquals(72, flexTrips.size());
 
@@ -92,9 +97,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
 
-    var accesses = trip
-      .getFlexAccessTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var accesses = trip.getFlexAccessTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(3, accesses.size());
 
@@ -107,9 +110,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
   public void calculateEgressTemplate() {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
-    var egresses = trip
-      .getFlexEgressTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var egresses = trip.getFlexEgressTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(3, egresses.size());
 
@@ -128,6 +129,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
 
     var router = new FlexRouter(
       graph,
+      transitModel,
       new FlexParameters(300),
       OffsetDateTime.parse("2021-11-12T10:15:24-05:00").toInstant(),
       false,
@@ -137,7 +139,9 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       List.of(to)
     );
 
-    var itineraries = router.createFlexOnlyItineraries();
+    var filter = new FaresFilter(graph.getService(FareService.class));
+
+    var itineraries = filter.filter(router.createFlexOnlyItineraries().stream().toList());
 
     var itinerary = itineraries.iterator().next();
     assertFalse(itinerary.getFare().fare.isEmpty());
@@ -158,9 +162,9 @@ public class ScheduledDeviatedTripTest extends FlexTest {
    */
   @Test
   public void flexTripInTransitMode() {
-    var feedId = graph.getFeedIds().iterator().next();
+    var feedId = transitModel.getFeedIds().iterator().next();
 
-    var router = new Router(graph, RouterConfig.DEFAULT, Metrics.globalRegistry);
+    var router = new Router(graph, transitModel, RouterConfig.DEFAULT, Metrics.globalRegistry);
     router.startup();
 
     // from zone 3 to zone 2
@@ -202,8 +206,8 @@ public class ScheduledDeviatedTripTest extends FlexTest {
    */
   @Test
   public void shouldNotInterpolateFlexTimes() {
-    var feedId = graph.getFeedIds().iterator().next();
-    var pattern = graph.tripPatternForId.get(new FeedScopedId(feedId, "090z:0:01"));
+    var feedId = transitModel.getFeedIds().iterator().next();
+    var pattern = transitModel.tripPatternForId.get(new FeedScopedId(feedId, "090z:0:01"));
 
     assertEquals(3, pattern.numberOfStops());
 
@@ -224,7 +228,9 @@ public class ScheduledDeviatedTripTest extends FlexTest {
 
   @BeforeAll
   static void setup() {
-    graph = FlexTest.buildFlexGraph(COBB_FLEX_GTFS);
+    OtpModel otpModel = FlexTest.buildFlexGraph(COBB_FLEX_GTFS);
+    graph = otpModel.graph;
+    transitModel = otpModel.transitModel;
   }
 
   private static List<Itinerary> getItineraries(
@@ -280,8 +286,8 @@ public class ScheduledDeviatedTripTest extends FlexTest {
   }
 
   private static FlexTrip getFlexTrip() {
-    var feedId = graph.getFeedIds().iterator().next();
+    var feedId = transitModel.getFeedIds().iterator().next();
     var tripId = new FeedScopedId(feedId, "a326c618-d42c-4bd1-9624-c314fbf8ecd8");
-    return graph.flexTripsById.get(tripId);
+    return transitModel.flexTripsById.get(tripId);
   }
 }
